fix trigger action

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ name: CD
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   release:
     # Only use the types keyword to narrow down the activity types that will trigger your workflow.
     types: [published]
