--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@zendeskgarden/react-tabs": "^8.37.1",
     "@zendeskgarden/react-theming": "^8.37.1",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
