--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inteligent_machine",
-  "homepage": "https://maquinasinteligentes.org",
+  "homepage": "https://electroniccats.github.io/inteligent_machines",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
